@@ -1,3 +1,13 @@
+2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* operation/menu.php,
+	operation/snmpconsole/snmp_view.php,
+	godmode/menu.php,
+	godmode/snmpconsole/snmp_trap_generator.php,
+	godmode/snmpconsole/snmp_alert.php,
+	godmode/snmpconsole/snmp_filters.php: Merged changes in menus from 4.0.2
+	SNMP menu now is inside Monitoring menu.
+
 2012-04-02 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_html.php: added into function "html_debug_print" the
